# math_modelling_american_gossip

./: README.md  epl.txt  extract_text.py  pre.txt  pyproject.toml  requirements.txt  test_api.py  test_frontend_payload.py
configs/: default.yaml
docs/: REPRODUCTION.md  TECHNICAL_REPORT.md
experiments/: distributions.py  probability_experiments.py  reproduce_epl.py  reproduce_pre.py  runner.py  scaling_laws.py
graphs/: __init__.py  apollonian.py  ba.py  erdos_renyi.py  loaders.py  utils.py  ws.py
outputs/: epl_results.json  pre_results.json
outputs/dashboard/: index.html
outputs/processed/: probability_sweep_ba.csv  probability_sweep_er.csv  probability_sweep_ws.csv
propagation/: __init__.py  base.py  kth_neighbor.py  metrics.py  probabilistic.py
report/: main.tex  tau.bib
report/tau-class/: tau.cls  taubabel.sty
scripts/: build_dashboard.py  build_dashboard.sh  export_animation.py  generate_figures.py  generate_figures.sh  run_all.py  run_all.sh  run_experiments.sh  run_tests.sh  server.py
tests/: test_graphs.py  test_propagation.py
visualization/: graph_renderer.py  static_plots.py
web/: index.html
web/assets/: data.json
