[tool.poetry]
name = "gossip-reproduction"
version = "0.1.0"
description = "Reproduction of gossip spreading experiments"
authors = ["Research Engineer <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
